feat(java/13): restructure reflection-annotations to golden standard
- Root level: README.md, decision.md, references.md, quiz.md, pom.xml, .gitignore
- All 9 sub-folders restructured with golden standard structure
- Removed src/ tree, exercises/ folder, stray .java files
- Total: 143 new files